# SVT-AV1

./: .gitignore  0001-ICOPY-macro.patch  CMakeLists.txt  appveyor.yml
.github/workflows/: sanitizers-known-warnings.txt  sanitizers.yml
Config/: Sample.cfg
Docs/: svt-av1_encoder_user_guide.md
Source/API/: EbApi.h  EbDebugMacros.h  EbSvtAv1.h  EbSvtAv1Enc.h
Source/App/EncApp/: EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppProcessCmd.c
Source/Lib/ASM_AVX2/: EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  highbd_fwd_txfm_avx2.c  wiener_convolve_avx2.c
Source/Lib/ASM_SSE4_1/: highbd_fwd_txfm_sse4.c
Source/Lib/Codec/: EbAdaptiveMotionVectorPrediction.c  EbCdefProcess.c  EbCodingLoop.c  EbCodingUnit.h  EbComputeSAD.h  EbDefinitions.h  EbDlfProcess.c  EbEncDecProcess.c  EbEncHandle.c  EbEntropyCoding.c  EbFullLoop.c  EbInitialRateControlProcess.c  EbInterPrediction.c  EbInterPrediction.h  EbIntraPrediction.c  EbIntraPrediction.h  EbMeSadCalculation.h  EbModeDecision.c  EbModeDecision.h  EbModeDecisionConfiguration.c  EbModeDecisionConfiguration.h  EbModeDecisionConfigurationProcess.c  EbModeDecisionConfigurationProcess.h  EbModeDecisionProcess.h  EbMotionEstimation.c  EbMotionEstimationContext.h  EbMotionEstimationProcess.c  EbPacketizationProcess.c  EbPictureAnalysisProcess.c  EbPictureControlSet.c  EbPictureControlSet.h  EbPictureDecisionProcess.c  EbPictureDecisionQueue.c  EbPictureManagerProcess.c  EbPictureManagerQueue.c  EbPictureManagerQueue.h  EbProductCodingLoop.c  EbRateDistortionCost.c  EbRateDistortionCost.h  EbResourceCoordinationProcess.c  (+6 more)
Source/Lib/Common/ASM_AVX2/: EbBlend_a64_mask_avx2.c  EbComputeSAD_Intrinsic_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  EbPackUnPack_Intrinsic_AVX2.c  EbPictureOperators_Intrinsic_AVX2.c  cdef_block_simd.c  convolve_2d_avx2.c  convolve_avx2.c  highbd_convolve_2d_avx2.c  highbd_inv_txfm_avx2.c  pickrst_avx2.c  selfguided_avx2.c  wiener_convolve_avx2.c
Source/Lib/Common/ASM_AVX512/: EbPictureOperators_Intrinsic_AVX512.c  convolve_2d_avx512.c  highbd_inv_txfm_avx512.c  transpose_avx512.h  wiener_convolve_avx512.c
Source/Lib/Common/ASM_SSE2/: EbAvcStyleMcp_Intrinsic_SSE2.c  EbPackUnPack_Intrinsic_SSE2.c
Source/Lib/Common/ASM_SSE4_1/: EbBlend_a64_mask_sse4.c  filterintra_sse4.c  highbd_inv_txfm_sse4.c
Source/Lib/Common/C_DEFAULT/: EbBlend_a64_mask_c.c  EbPackUnPack_C.c  EbPackUnPack_C.h  (+2 more)
Source/TestsUT/: CMakeLists.txt  EbDefinitions.h  Test16x16.c  Test32x32.c  TestCore.h  TestPaethPredictor.c  TestsCore.c
test/: AVCStyleMcpTest.cc  AdaptiveScanTest.cc  BitstreamWriterTest.cc  CdefTest.cc  CompoundUtilTest.cc  DeblockTest.cc  EbBlend_a64_mask_1d_test.cc  EbBlend_a64_mask_test.cc  EbHighbdIntraPredictionTests.cc  EbSatdTest.cc  EncodeTxbAsmTest.cc  FFTTest.cc  FilmGrainTest.cc  FilterIntraPredTest.cc  ForwardtransformTests.cc  FwdTxfm1dTest.cc  FwdTxfm2dAsmTest.cc  FwdTxfm2dTest.cc  GlobalMotionUtilTest.cc  HbdVarianceTest.cc  IntraBcUtilTest.cc  InvTxfm1dTest.cc  InvTxfm2dAsmTest.cc  InversetransformTests.cc  MotionEstimationTest.cc  OBMCSadTest.cc  OBMCVarianceTest.cc  PackUnPackTest.cc  PaletteModeUtilTest.cc  PaletteTest.cc  PictureOperatorTest.cc  PsnrTest.cc  QuantAsmTest.cc  ResidualTest.cc  RestorationPickTest.cc  SadTest.cc  SelfGuidedUtilTest.cc  SpatialFullDistortionTest.cc  TemporalFilterTestPlanewise.cc  TestEnv.c  (+18 more)
test/api_test/: SvtAv1EncParamsTest.cc  params.h
test/e2e_test/: ParseUtil.cc  RefDecoder.h  SvtAv1E2EFramework.cc
test/ref/: EbComputeMean_C.c  TxfmRef.cc  TxfmRef.h
(+161 files in other folders)
